--- a/index.html
+++ b/index.html
@@ -3,9 +3,179 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>Bootstrap booting</title>
+   <link rel="stylesheet" href="css/bootstrap/css/bootstrap.min.css">
+   <style>
+      h1{
+         margin-top: 100px;
+      }
+   </style>
 </head>
 <body>
+   <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light ">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Dropdown
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
    <h1>Hello from bootstrap</h1>
+   <h1>Button</h1>
+   <button class="btn btn-primary">action</button>
+   <h1>Text Color</h1>
+   <p class="text-primary">my first bootstrap</p>
+   <h1>background</h1>
+   <div class="bg-primary text-white">
+      <h1>my news</h1>
+      <p>i am learning bootstrap</p>
+   </div>
+   <div class="bg-info text-white">
+      <h1>my hobby</h1>
+      <p>it's bootstrap</p>
+   </div>
+
+
+   <h1>images</h1>
+   <img class="img-fluid w-25 rounded-circle img-thumbnail" src="images/20190224_124221 (2).jpg" alt="">
+   <img class="img-fluid w-25 rounded-circle" src="images/1481830681309.jpg" alt="">
+   <img src="images/edit2.png" class="w-25" alt="">
+   
+   
+   
+   
+<h1>card</h1>
+<div class="card" style="width: 18rem;">
+   <img src="images/edit2.png" class="card-img-top " alt="...">
+   <div class="card-body">
+     <h5 class="card-title">Shovon</h5>
+     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+     <a href="#" class="btn btn-primary">Go somewhere</a>
+   </div>
+ </div>
+
+
+ <h1>card deck</h1>
+
+ <div class="card-deck">
+   <div class="card ">
+     <img src="images/edit (2).png" class="card-img-top alt="...">
+     <div class="card-body">
+       <h5 class="card-title">Card title</h5>
+       <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+     </div>
+   </div>
+   <div class="card">
+     <img src="images/1481830681309.jpg" class="card-img-top " alt="...">
+     <div class="card-body">
+       <h5 class="card-title">Card title</h5>
+       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+     </div>
+   </div>
+   <div class="card">
+     <img src="images/edit2.png" class="card-img-top" alt="...">
+     <div class="card-body">
+       <h5 class="card-title">Card title</h5>
+       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+     </div>
+   </div>
+ </div>
+
+ <h1>navigation</h1>
+ <nav class="nav">
+ <a class="nav-link" href="">home</a>
+ <a class="nav-link" href="">products</a>
+ <a class="nav-link" href="">shoping card</a>
+ <a class="nav-link" href="">shipping</a>
+
+</nav>
+<ul class="nav">
+   <li class="nav-item">
+     <a class="nav-link active" href="#">Active</a>
+   </li>
+   <li class="nav-item">
+     <a class="nav-link" href="#">Link</a>
+   </li>
+   <li class="nav-item">
+     <a class="nav-link" href="#">Link</a>
+   </li>
+   <li class="nav-item">
+     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+   </li>
+ </ul>
+ 
+ <div class="container">
+  <h1>Grid</h1>
+  <div class="row">
+  <div class="col-4">
+    <p>Build responsive, mobile-first projects on the web with the world’s most popular front-end component library.Build responsive, mobile-first projects on the web with the world’s most popular front-end component library.Bootstrap is an open source toolkit for developing with HTML, CSS, and JS. Quickly prototype your ideas or build your entire app with our Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful plugins built on jQuery.Build responsive, mobile-first projects on the web with the world’s most popular front-end component library.Bootstrap is an open source toolkit for developing with HTML, CSS, and JS. Quickly prototype your ideas or build your entire app with our Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful plugins built on jQuery.Bootstrap is an open source toolkit for developing with HTML, CSS, and JS. Quickly prototype your ideas or build your entire app with our Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful plugins built on jQuery.</p>
+  </div>
+  <div class="col-4">
+    <p>Build responsive, mobile-first projects on the web with the world’s most popular front-end component library.Build responsive, mobile-first projects on the web with the world’s most popular front-end component library.Bootstrap is an open source toolkit for developing with HTML, CSS, and JS. Quickly prototype your ideas or build your entire app with our Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful plugins built on jQuery.Build responsive, mobile-first projects on the web with the world’s most popular front-end component library.Bootstrap is an open source toolkit for developing with HTML, CSS, and JS. Quickly prototype your ideas or build your entire app with our Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful plugins built on jQuery.Bootstrap is an open source toolkit for developing with HTML, CSS, and JS. Quickly prototype your ideas or build your entire app with our Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful plugins built on jQuery.</p>
+  </div> 
+  <div class="col-4">
+   <p>Build responsive, mobile-first projects on the web with the world’s most popular front-end component library.Build responsive, mobile-first projects on the web with the world’s most popular front-end component library.Bootstrap is an open source toolkit for developing with HTML, CSS, and JS. Quickly prototype your ideas or build your entire app with our Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful plugins built on jQuery.Build responsive, mobile-first projects on the web with the world’s most popular front-end component library.Bootstrap is an open source toolkit for developing with HTML, CSS, and JS. Quickly prototype your ideas or build your entire app with our Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful plugins built on jQuery.Bootstrap is an open source toolkit for developing with HTML, CSS, and JS. Quickly prototype your ideas or build your entire app with our Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful plugins built on jQuery.</p>
+  </div>
+ <h1>carousel</h1>
+ <div class="container">
+  <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="images/edit2.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="images/edit (2).png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="images/1481830681309.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+ </div>
+ <div class="container">
+   <h1>flex layout</h1>
+ </div>
+  
+ <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+ <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+ <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
